aws/064592191516/extract/route_table/ 0-route-table-rtb-69f12a16.tf
resource "aws_route_table" "tfer--rtb-69f12a16" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-71133409"
  }

  vpc_id = "vpc-0827c472"
}

resource "aws_route_table" "tfer--rtb-69f12a16" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-71133409"
  }

  vpc_id = "vpc-0827c472"
}

resource "aws_route_table" "tfer--rtb-69f12a16" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-71133409"
  }

  vpc_id = "vpc-0827c472"
}

resource "aws_route_table" "tfer--rtb-69f12a16" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-71133409"
  }

  vpc_id = "vpc-0827c472"
}

resource "aws_route_table" "tfer--rtb-69f12a16" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-71133409"
  }

  vpc_id = "vpc-0827c472"
}
